--- a/anchor-movie-review-program/Anchor.toml
+++ b/anchor-movie-review-program/Anchor.toml
@@ -1,4 +1,5 @@
 [toolchain]
+package_manager = "yarn"
 
 [features]
 resolution = true
@@ -6,14 +7,14 @@ skip-lint = false
 seeds = true
 
 [programs.localnet]
-anchor_movie_review_program = "ALL6TxAGF9tpgrBV8WQMzfcs52XSBFo3kLJ7iJn52UjJ"
+anchor_movie_review_program = "2bR1ukzArMpx3KJ5iVs8wjJbfueNj51hSfEJ8Y9Fes6V"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "https://api.devnet.solana.com"
-wallet = "/home/dev/.config/solana/id.json"
+cluster = "localnet"
+wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
